--- a/password/passgen/templates/home.html
+++ b/password/passgen/templates/home.html
@@ -8,10 +8,35 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Password Generator App</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container text-center">
+      <h1>Password Generator using Django</h1>
+      <form action="{% url 'passgen' %}" >
+        <select name="length">
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10" selected = "selected">10</option>
+          <option value="11">11</option>
+          <option value="12">12</option>
+          <option value="13">13</option>
+        </select>
+      <br>
+      <br>
+      <input type="checkbox" name="uppercase">Uppercase
+      <br>
+      <br>
+      <input type="checkbox" name="digits">Digits
+      <br>
+      <br>
+      <input type="checkbox" name="symbols">Symbols
+      <br>
+      <br>
+      <input type="submit" value="passwordgen"
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
